apply/serviceCoordinator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: "lake-presto-coordinator"
  name: "lake-presto"
spec:
  selector:
    application: "lake-presto-coordinator"
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: lake-presto-coordinator
      # this needs to match your container port
      targetPort: 8080
